# drone

./: .gitignore
configurator_ui/: index.html  package-lock.json  package.json
configurator_ui/src/: ConfiguratorPage.css  ConfiguratorPage.tsx  TabBar.tsx  index.css  theme.ts
configurator_ui/src/app/: App.tsx
configurator_ui/src/features/flasher/: flasherCallback.ts
configurator_ui/src/features/tabs/: Flasher.css  Flasher.tsx  MotorsTab.tsx  PidTab.tsx  PortsTab.tsx  ReceiverTab.tsx  SetupTab.tsx  Tabs.ts
drone_firmware/: Cargo.toml
drone_firmware/flight/: Cargo.toml
drone_firmware/maths/: Cargo.toml
drone_firmware/maths/src/: consts.rs  lib.rs  mat3.rs  quat.rs  vec.rs  vec2.rs  vec3.rs
libraries/Maths/: Vector3.hpp  Vector3.tpp  maths.hpp  numericalConstants.h
